<resources>
    <string name="app_name">Try_EditName</string>
    <string name="editName">이름을 입력하세요</string>
    <string name="nameLable">이름</string>
    <string name="ageLable">나이</string>
    <string name="editAge">나이를 입력하세요</string>
    <string name="btnResult">결과보기</string>
    <string name="radiobuttonsexF">여자</string>
    <string name="radiobuttonsexM">남자</string>
    <string name="txtRadiogroupSex">성별</string>
    <string name="txtradiogroupJob">직업</string>
    <string name="radiobuttonstudent">학생</string>
    <string name="radiobuttonworker">직장인</string>
</resources>
